--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.rdk.shader-library": "https://github.com/ryanKeable/Unity-Shader-Lib.git",
+    "com.rdk.shader-library": "git+https://x-oauth-basic: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@github.com/ryanKeable/Unity-Shader-Lib.git?",
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.ide.rider": "3.0.25",
     "com.unity.ide.visualstudio": "2.0.21",
@@ -12,6 +12,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.1",
     "com.unity.xr.management": "4.4.0",
+    "com.unity.xr.meta-openxr": "1.0.1",
     "com.unity.xr.oculus": "4.1.2",
     "com.unity.xr.openxr": "1.8.2",
     "com.unity.modules.ai": "1.0.0",
